FitLifeProLatest/force-app/main/default/objects/Lead/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
            <value>
                <fullName>Udupi</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Thiruvananthapuram</fullName>
            </value>
            <value>
                <fullName>Ernakulam</fullName>
            </value>
            <value>
                <fullName>Kochi</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Malibu</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Albany</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>Olympia</fullName>
            </value>
            <value>
                <fullName>Marysville</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Austell</fullName>
            </value>
            <value>
                <fullName>Helen</fullName>
            </value>
            <value>
                <fullName>Edinburgh</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Aberdeen</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>