FitLifeProLatest/force-app/main/default/objects/Lead/fields/Geographic_Location__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Location__c</fullName>
    <label>Geographic Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>