FitLifeProLatest/force-app/main/default/objects/Lead/fields/Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>Hear_About_Us__c</fullName>
    <label>Hear About Us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade_show</fullName>
                <label>Trade show</label>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Social_Media</fullName>
                <label>Social Media</label>
            </value>
            <value>
                <fullName>email_Campaign</fullName>
                <label>email Campaign</label>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>