FitLifeProLatest/force-app/main/default/objects/Lead/fields/How_do_you_know_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_know_about_us__c</fullName>
    <label>How do you know about us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>