FitLifeProLatest/force-app/main/default/objects/Lead/fields/I_agree__c.field-meta.xml
<CustomField>
    <fullName>I_agree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I agree</label>
    <type>Checkbox</type>
</CustomField>