FitLifeProLatest/force-app/main/default/objects/Lead/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
                <default>true</default>
                <label>Enquiry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>