FitLifeProLatest/force-app/main/default/objects/Lead/fields/Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_End_Date__c</fullName>
    <formula>IF(
ISPICKVAL( Subscription__c , &#39;Monthly&#39;),
Membership_Start_Date__c +30,
IF(
ISPICKVAL( Subscription__c , &#39;Quarterly&#39;),
Membership_Start_Date__c +120,
Membership_Start_Date__c +365)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership End Date</label>
    <type>Date</type>
</CustomField>