FitLifeProLatest/force-app/main/default/objects/Lead/fields/Mode_Of_Class__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Class__c</fullName>
    <label>Mode Of Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
                <default>true</default>
                <label>In Person</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>