FitLifeProLatest/force-app/main/default/objects/Lead/fields/Want_to_send_Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Want_to_send_Registration_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Want to send Registration Link</label>
    <type>Checkbox</type>
</CustomField>