FitLifeProLatest/force-app/main/default/objects/Lead/validationRules/Disclaimer_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Disclaimer_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (I_agree__c )</errorConditionFormula>
    <errorDisplayField>I_agree__c</errorDisplayField>
    <errorMessage>Agree the condition</errorMessage>
</ValidationRule>