FitLifeProLatest/force-app/main/default/objects/Lead/validationRules/Location_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( (ISPICKVAL( Mode_Of_Class__c , &#39;In Person&#39;) ), ISPICKVAL(  Geographic_Location__c ,&#39; &#39;),  ISPICKVAL(State__c,&#39; &#39;), ISPICKVAL( District__c ,&#39; &#39; ))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Please select the location for &#39;In person&#39; mode</errorMessage>
</ValidationRule>