FitLifeProLatest/force-app/main/default/objects/Lead/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR((LEN( Phone )&lt;&gt;10), NOT(ISNUMBER( Phone )))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter valid phone number</errorMessage>
</ValidationRule>